# mlops-sbt

./: .gitignore
.dvc/: config
hw1/: Dockerfile  Makefile  README.md  perf.py  pyproject.toml  setup.py
hw1/pupok/: __init__.py
hw1/pupok/python/: bindings.cpp
hw1/pupok/src/: cosine_similarity.cpp  cosine_similarity.h
hw2/: docker-compose.yaml  mnist_train.csv.dvc  requirements.txt
hw2/proj/: Task.md  mnist_test.csv.dvc  train.py  visualize.py
hw2/proj/.logs/my-tb-logs/pupok_tb_logger/version_3/: events.out.tfevents.1732477252.MacBook-Pro-11.local.42678.0
hw2/proj/conf/: artifacts.yaml  config.yaml  data.yaml  logger.yaml  model.yaml  train.yaml
hw2/proj/outputs/2024-11-24/01-39-54/.hydra/: config.yaml  hydra.yaml
hw2/proj/outputs/2024-11-24/22-40-52/.hydra/: config.yaml  hydra.yaml
hw2/proj/outputs/2024-11-24/23-22-46/.hydra/: hydra.yaml
hw2/proj/src/: data.py  model.py
hw3/: README.md
hw3/part_one/: convert_to_trt.sh  flops.ipynb  torch2onnx.py
hw3/part_two/: Dockerfile  client.py
hw3/part_two/model_repository/ensemble/: config.pbtxt
hw3/part_two/model_repository/model_ONNX/: config.pbtxt
hw3/part_two/model_repository/model_TRT_BEST/: config.pbtxt
hw3/part_two/model_repository/model_TRT_FP16/: config.pbtxt
hw3/part_two/model_repository/model_TRT_FP32/: config.pbtxt
hw3/part_two/model_repository/model_TRT_INT8/: config.pbtxt
hw3/part_two/model_repository/tokenizer/1/: model.py
hw3/perf_analyzer/: perf_model_ONNX.csv  perf_model_TRT_BEST.csv  perf_model_TRT_FP16.csv  perf_model_TRT_FP32.csv  perf_model_TRT_INT8.csv
(+18 files in other folders)
