[build-system]
requires = ["setuptools>=42", "wheel", "pybind11>=2.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pupok"
version = "0.1"
description = "Cosine similarity utilities with Python bindings"
requires-python = ">=3.8"

[tool.setuptools]
packages = ["pupok"]
include-package-data = true

[tool.setuptools.package-data]
pupok = ["python/*.so"]
